--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      
+      - name: Run JUnit Tests
+        run: 
+            javac ""
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
