--- a/MakeFile
+++ b/MakeFile
@@ -1,22 +1,10 @@
-# MarkdownParse.java:
-# 	java MarkdownParse
+CLASSPATH = lib/junit-4.13.2.jar:lib/hamcrest-core-1.3.jar:lib/commonmark-0.18.1.jar:.
 
-# MarkdownParse.class: MarkdownParse.java
-# 	javac MarkdownParse.java	
+MarkdownParseTest.class: MarkdownParseTest.java MarkdownParse.class
+	javac -g -cp $(CLASSPATH) MarkdownParseTest.java
 
-# MarkdownParseTest.class: MarkdownParseTest.java MarkdownParse.class
-# 	javac -cp .:lib/junit-4.13.2.jar:lib/hamcrest-core-1.3.jar MarkdownParseTest.java
+MarkdownParse.class: MarkdownParse.java
+	javac -g -cp $(CLASSPATH) MarkdownParse.java
 
-# Test: MarkdownParseTest.class
-# 	java -cp .:lib/junit-4.13.2.jar:lib/hamcrest-core-1.3.jar org.junit.runner.JUnitCore MarkdownParseTest
-# clean: 
-# 	rm *.class
-
-MarkdownParse.class : MarkdownParse.java
-	javac MarkdownParse.java     
-
-MarkdownParseTest.class : MarkdownParseTest.java MarkdownParse.class
-	javac -cp .:lib/junit-4.12.jar:lib/hamcrest-core-1.3.jar MarkdownParseTest.java
-
-Test : MarkdownParseTest.class
-	java -cp .:lib/junit-4.12.jar:lib/hamcrest-core-1.3.jar org.junit.runner.JUnitCore MarkdownParseTest 
+test: MarkdownParseTest.class
+	java -cp $(CLASSPATH) org.junit.runner.JUnitCore MarkdownParseTest 
